--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "extremeqt",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "An Extremely fast and lightweight quadtree made in C++ for NodeJS",
   "main": "src/exports/wrapper.js",
-  "scripts": {},
+  "scripts": {
+    "install": "node-gyp configure && node-gyp build"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Sopur/ExtremeQuadTree.git"
@@ -27,7 +29,8 @@
   "license": "MIT",
   "dependencies": {
     "bindings": "^1.5.0",
-    "node-addon-api": "^5.0.0"
+    "node-addon-api": "^5.0.0",
+    "node-gyp": "^9.0.0"
   },
   "gypfile": true
 }
